--- a/020_SupervisedLearning/pyproject.toml
+++ b/020_SupervisedLearning/pyproject.toml
@@ -10,11 +10,11 @@ python = "^3.12"
 jupyter = "^1.1.1"
 pandas = "^2.2.3"
 matplotlib = "^3.9.2"
-numpy = "^2.1.3"
 nltk = "^3.9.1"
 seaborn = "^0.13.2"
 plotly = "^5.24.1"
 scikit-learn = "^1.5.2"
+tensorflow = {extras = ["and-cuda"], version = "^2.18.0"}
 
 
 [build-system]
